# layrz_ble

./: .gitignore  .metadata  CHANGELOG.md  CLAUDE.md  CONTRIBUTING  Makefile  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
.github/workflows/: checks.yaml  publish.yaml  publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
darwin/Classes/: LayrzBle.g.swift
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle  (+1 more)
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: layrz_ble.podspec
ios/Classes/: Enums.swift  LayrzBlePlugin.swift
lib/: layrz_ble.dart  layrz_ble_web.dart
lib/src/: layrz_ble_method_channel.dart  layrz_ble_platform_interface.dart  method_channel.dart  platform_interface.dart  types.dart
macos/: layrz_ble.podspec
macos/Classes/: Entities.swift  Enums.swift  LayrzBlePlugin.swift
pigeon/: layrz_ble.dart
test/: bluetooth_status_widget_test.dart
windows/: CMakeLists.txt  layrz_ble_plugin.cpp  layrz_ble_plugin.h  layrz_ble_plugin_c_api.cpp
windows/include/: enums.h  layrz_ble_plugin.cpp  layrz_ble_plugin.h
windows/include/helper/: layrz_ble_base.h  layrz_enum.h
windows/include/layrz_ble/: layrz_ble_plugin_c_api.h
windows/src/: ble_device_manager.cpp  ble_device_manager.h  gatt.h  layrz_ble_plugin.cpp  layrz_ble_plugin.h  scan_result.cpp  scan_result.h  thread_handler.hpp  utils.cpp  utils.h
windows/test/: layrz_ble_plugin_test.cpp
(+33 files in other folders)
